--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,22 @@
 <html lang="pl">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="title" content="AdamusDEV">
+		<meta name="description" content="Strony internetowe, które pomogą Ci w rozwoju biznesu. Pomogę Ci w przekazaniu informacji o Twojej firmie dla wszystkich potencjalnych klientów.">
+		<meta name="keywords" content="webdev, strony internetowe, strony, tworzenie stron, programowanie stron, programista stron, portfolio internetowe, frontend, frontend development, reklama, reklama firmy">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="Polish">
+		<meta name="author" content="Kacper Adamus">
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/SEO/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/SEO/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/SEO/favicon-16x16.png">
+		<link rel="manifest" href="%sveltekit.assets%/SEO/site.webmanifest">
+		<link rel="mask-icon" href="%sveltekit.assets%/SEO/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="%sveltekit.assets%/SEO/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="%sveltekit.assets%/SEO/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>AdamusDEV</title>
 		%sveltekit.head%
