--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pl">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="title" content="AdamusDEV">
 		<meta name="description" content="Strony internetowe, które pomogą Ci w rozwoju biznesu. Pomogę Ci w przekazaniu informacji o Twojej firmie dla wszystkich potencjalnych klientów.">
 		<meta name="keywords" content="webdev, strony internetowe, strony, tworzenie stron, programowanie stron, programista stron, portfolio internetowe, frontend, frontend development, reklama, reklama firmy">
@@ -21,6 +21,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>AdamusDEV</title>
 		%sveltekit.head%
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
